--- a/index.html
+++ b/index.html
@@ -782,9 +782,9 @@
                         <div class="col-lg-12">
                             <!-- items selector start -->
                             <div class="item-selector">
-                                <a href="#" class="item-button" data-target="menu-1">Pizzas</a>
-                                <a href="#" class="item-button" data-target="menu-2">Salads</a>
-                                <a href="#" class="item-button" data-target="menu-3">Drinks</a>                            
+                                <a href="#" class="item-button" data-target="menu-1">Dessert</a>
+                                <a href="#" class="item-button" data-target="menu-2">Cake</a>
+                                <a href="#" class="item-button" data-target="menu-3">Snackss</a>                            
                             </div>
                             <!-- items selector end -->
                             <!-- divider start -->
